normal-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: normal-nginx-deployment
  namespace: ingress-nginx
  labels:
    app: normal-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: normal-nginx
  template:
    metadata:
      labels:
        app: normal-nginx
    spec:
      containers:
        - name: normal-nginx
          image: nginxdemos/hello
          ports:
            - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: normal-nginx-service
  namespace: ingress-nginx
spec:
  selector:
    app: normal-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
