ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhanush
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: dhanush-secret-tls
      hosts:
        - dhanush.com
  rules:
    - host: dhanush.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-basic-pro-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-basic-pro-service
                port:
                  number: 443
    - host: dhanush.com
      http:
        paths:
          - path: /normal-nginx
            pathType: Prefix
            backend:
              service:
                name: normal-nginx-service
                port:
                  number: 80
          - path: /normal-nginx
            pathType: Prefix
            backend:
              service:
                name: normal-nginx-service
                port:
                  number: 443
